Bug 1166133 - If proxy is available and an error happens, onStart/onStopRequest can be called twice. r=mcmanus, a=sledru